Use `Path.of()` instead of `Paths.get()` in various places